--- a/TarabondaG-3.ipynb
+++ b/TarabondaG-3.ipynb
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В этих случаях довольно ярко видна линейная зависимость: $X_{(i)} \\approx \\alpha \\cdot \\frac{\\texttt{people}}{n}$. И можно предположить, что данные величины рапсределены именно таким образом."
+    "В этих случаях довольно ярко видна линейная зависимость: $X_{(k)} \\approx \\alpha \\cdot \\frac{k}{n}$. И можно предположить, что данные величины рапсределены именно таким образом."
    ]
   },
   {
